<resources>
    <string name="app_name">PokemonApp</string>
    <string name="pokemon_name_hint">Nome do Pokemon</string>
    <string name="search_button">Pesquisar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="return_button_text">Retornar</string>
    <string name="image_from_url">Imagem do pokemon</string>
    <string name="hp">PS:</string>
    <string name="attack">Ataque:</string>
    <string name="defense">Defesa:</string>
    <string name="special_attack">Atq. Es.:</string>
    <string name="special_defense">Def. Es.:</string>
    <string name="speed">Velocidade:</string>
    <string name="pokemon_name">Nome do pokemon</string>
    <string name="valid_name">Digite um nome válido de pokemon</string>
    <string name="success_search">Pokemon encontrado!</string>
    <string name="fail_seach">Pokemon não encontrado\n</string>
    <string name="favorite_list_frag">Meus favoritos</string>
    <string name="not_found">Pokemons não encontrados</string>
    <string name="delete_fail">Falha ao remover pokemon favorito</string>
    <string name="delete_sucess">Pokemon removido com sucesso</string>
    <string name="add_favorite">Pokemon adicionado aos favoritos!</string>
    <string name="favorite_found">Pokemons favoritos carregados!</string>
    <string name="load_sucess">Mais pokemons encontrados!</string>
    <string name="load_fail">Falha ao carregar mais pokemons!</string>
    <string name="list_frag">Lista de pokemons</string>

    <string name="hint_email">email@email.com</string>
    <string name="button_login">Login</string>
    <string name="hint_password">**********</string>
    <string name="register">Cadastro</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="button_register">Cadastrar</string>
    <string name="not_registered">Não registrado? Clique aqui</string>
    <string name="valid_login">Nome ou senha inválido</string>
    <string name="valid_register">Nome, E-mail ou senha inválidos</string>
    <string name="password_not_match">Conformação da senha não corresponde à senha original</string>
    <string name="back_button_description">Back button</string>
    <string name="weak_password">Digite uma senha com no mínimo 6 caracteres</string>
    <string name="invalid_credentials">Digite um email válido</string>
    <string name="user_collision">Este e-mail já foi cadastrado</string>
    <string name="network_error">Falha de conexão com a internet</string>
    <string name="register_fail">Houve algum problema no cadastro</string>
    <string name="login_fail">Houve algum problema no login, tente novamente</string>
    <string name="invalid_user">Este usuário não existe</string>
    <string name="wrong_password">O usuário existe mas a senha está incorreta</string>
    <string name="delete_cancel">Pokemon favorito recuperado!</string>
    <string name="delete_cancel_fail">Não foi possível recuperar pokemon favorito</string>
    <string name="undo">Desfazer</string>

    <string name="pokemon_added_to_favorites">Pokemon adicionado aos favoritos!</string>
    <string name="pokemon_removed_from_favorites">Pokemon removido dos favoritos.</string>
    <string name="error_updating_favorites">Erro atualizando favoritos.</string>
</resources>